RESOLVED FIXED40965
[EFL] Fix warnings about printf format
https://bugs.webkit.org/show_bug.cgi?id=40965
Summary [EFL] Fix warnings about printf format
Lucas De Marchi
Reported 2010-06-21 19:39:08 PDT
[EFL] Fix warnings about printf format
Attachments
Patch (1.67 KB, patch)
2010-06-21 19:42 PDT, Lucas De Marchi
no flags
Lucas De Marchi
Comment 1 2010-06-21 19:42:47 PDT
Gyuyoung Kim
Comment 2 2010-06-21 19:45:35 PDT
*** Bug 40963 has been marked as a duplicate of this bug. ***
WebKit Commit Bot
Comment 3 2010-06-25 06:25:56 PDT
Comment on attachment 59327 [details] Patch Clearing flags on attachment: 59327 Committed r61858: <http://trac.webkit.org/changeset/61858>
WebKit Commit Bot
Comment 4 2010-06-25 06:26:01 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.