2010-06-25  Lucas De Marchi  <lucas.demarchi@profusion.mobi>

Reviewed by Kenneth Rohde Christiansen.

        [EFL] Fix warnings about printf format
        When printing uint64_t the macro PRIu64 is needed in order to be
        portable across 32 and 64 bits. It was previously showing warning
        messages on 32-bits systems.
        https://bugs.webkit.org/show_bug.cgi?id=40965

        * efl/ewk/ewk_view.cpp:
        (ewk_view_exceeded_database_quota):

Canonical link: https://commits.webkit.org/52858@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@61858 268f45cc-cd09-0410-ab3c-d52691b4dbfc